# WhatStandard

./: .gitignore  README.md  app.py  chain.py  contextual_retrieval.py  developer.ipynb  experimental.ipynb  langchain_version.ipynb  pdf_documentation.py  pdf_retriever.py  produce_hub.py  pyproject.toml  vectores_langchain.py
.ipynb_checkpoints/: developer-checkpoint.ipynb  experimental-checkpoint.ipynb  langchain_version-checkpoint.ipynb  pdf_retriever-checkpoint.py
resources/: doc_name.json
